objects/Meta_de_Visitas__c.object
<CustomObject>
    <fields>
        <fullName>Canal__c</fullName>
        <label>Canal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Trade</fullName>
                </value>
                <value>
                    <fullName>Off Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meta_Abril__c</fullName>
        <label>Meta Abril</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meta_Agosto__c</fullName>
        <label>Meta Agosto</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meta_Fevereiro__c</fullName>
        <label>Meta Fevereiro</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meta_Janeiro__c</fullName>
        <label>Meta Janeiro</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meta_Julho__c</fullName>
        <label>Meta Julho</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meta_Junho__c</fullName>
        <label>Meta Junho</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meta_Maio__c</fullName>
        <label>Meta Maio</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meta_Mar_o__c</fullName>
        <label>Meta Março</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meta_Setrembro__c</fullName>
        <label>Meta Setembro</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metas_Dezembro__c</fullName>
        <label>Metas Dezembro</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metas_Novembro__c</fullName>
        <label>Metas Novembro</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metas_Outubro__c</fullName>
        <label>Metas Outubro</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regional__c</fullName>
        <label>Regional</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>Sul</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Canal__c</fullName>
        <label>Sub-Canal</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Canal__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Atacadista</fullName>
                </value>
                <value>
                    <fullName>C&amp;C</fullName>
                </value>
                <value>
                    <fullName>Canais Alternativos</fullName>
                </value>
                <value>
                    <fullName>Delicatessen</fullName>
                </value>
                <value>
                    <fullName>Distribuidor</fullName>
                </value>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>Varejo Regional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Meta de Visitas</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Meta de Visitas (Ano Referência)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meta de Visitas</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>